maintainIT2/src/objects/Purchase_Order_Para__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Purchase Order Parameters</description>
    <fields>
        <fullName>AutoGenBatchSize__c</fullName>
        <description>Determines the Maximum Number of Parts that can be selected in the Auto Purchase Order Generation Batch Schedule Process</description>
        <inlineHelpText>Determines the Maximum Number of Parts that can be selected in the Auto Purchase Order Generation Batch Schedule Process</inlineHelpText>
        <label>AutoGenBatchSize</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <description>Default Billing City for Purchase Orders</description>
        <inlineHelpText>Default Billing City for Purchase Orders</inlineHelpText>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <description>Default Billing Country for Purchase Orders</description>
        <inlineHelpText>Default Billing Country for Purchase Orders</inlineHelpText>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <description>Default Billing State / Province for Purchase Orders</description>
        <inlineHelpText>Default Billing State / Province for Purchase Orders</inlineHelpText>
        <label>Billing State Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <description>Default Billing Street for Purchase Orders</description>
        <inlineHelpText>Default Billing Street for Purchase Orders</inlineHelpText>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_ZIP_Postal__c</fullName>
        <description>Default Billing ZIP / Postal Code for Purchase Orders</description>
        <inlineHelpText>Default Billing ZIP / Postal Code for Purchase Orders</inlineHelpText>
        <label>Billing ZIP Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disallow_PO_Part_Over_Receipts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Disallow PO Part Over Receipts Parameter is used conjunction with PO Parts Over Receipts Validation Rule to Allow/Disallow Over Receipts (Receipt Qty &gt; Order Qty)</description>
        <inlineHelpText>The Disallow PO Part Over Receipts Parameter is used conjunction with PO Parts Over Receipts Validation Rule to Allow/Disallow Over Receipts (Receipt Qty &gt; Order Qty)</inlineHelpText>
        <label>Disallow PO Part Over Receipts</label>
        <type>Checkbox</type>
    </fields>
    <label>Purchase Order Parameters</label>
</CustomObject>